app/components/result/component.module.css
.main {
    background-color: #FBF3E6;
    position: absolute;
    margin: 49px;
}

.icon-logo {
    position: relative;
    width: 47px;
    height: 47px;
    bottom: 10px;
    margin-left: 20px;
}

.top-container {
    margin: 176px;
    position: absolute;
}

.top-bar {
    align-items: center;
    position: relative;
    bottom: 259px;
    height: 70px;
    width: 100%;
}

.search-bar {
    position: static;
    margin-left: 75px;
    bottom: 160px;
}

.search-bar input {
    position: static;
    background-color: #FBF3E6;
    border: 2px solid #073243;
    padding-left: 40px;
    font-size: 18px;
    font-weight: 400;
    font-family: 'Roboto', sans-serif;
    width: 669px;
    height: 47px;
    border-radius: 50px;
    background: url('https://res.cloudinary.com/dayv9oa8q/image/upload/v1759325005/Group_111_bomakc.png') no-repeat; 
    background-size: 75px 51px;
    background-position: 636px -1px; 

}

.nav-bar{
    background-color: #FBF3E6;
    position: relative;
    bottom: 265px;
    height: 70px;
    width: 100%;
}

.nav-icon {
    position: relative;
    width: 61px;
    height: 37px;
    top: 5px;
    margin-left: 725px;
    cursor: pointer;
    transition: opacity 0.3s;
}

.nav-icon:hover {
    opacity: 0.7;
}

.nav-row {
    display: none;
    position: absolute;
    justify-content: space-around;
    align-items: center;
    gap: 21px;
    left: 107px;
    bottom: 310px;
    opacity: 0;
    transition: opacity 0.3s ease;
}

.nav-row.show {
    display: flex;
    opacity: 1;
}

.nav-row h2 {
    margin: 0;            
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
    font-size: 18px;
}

.nav-row h2 a {
    padding: 10px 20px;
    text-decoration: none;
    color: #073243;
    border: 2px solid transparent;
    border-radius: 50px;
    display: inline-block;
    transition: all 0.3s ease;
}

.nav-row h2 a:hover {
    padding: 10px 20px;
    background-color: transparent;
    border: 2px solid #073243;
}

.book-container  {
    display: flex;
    flex-direction: column;
    position: relative;
    gap: 40px;
    width: 144px;
    height: 222px;
    top: 100px;
    left: 250px;
}

.dit-1, .dit-2, .dit-3 {
    position: relative;
    width: 300px;
    height: 222px;
}

.b-1, .b-2, .b-3 {
    position: relative;
    width: 144px;
    height: 222px;
    box-shadow: 14px 13px 5px gray;
}


.middle-con-1, .middle-con-2, .middle-con-3 {
    position: relative;
    bottom: 215px;
    left: 194px;
}

.title-1, .title-2, .title-3 {
    font-family: 'Roboto', sans-serif;
    font-size: 20px;
    font-weight: 700;
    color: #073243;
    margin: 0;
}

.mini-detail-1, .mini-detail-2, .mini-detail-3 {
    font-family: 'Roboto', sans-serif;
    position: relative;
    font-size: 18px;
    width: 482px;
    font-weight: 700;
    color: #073243;
    margin: 0;
    margin-top: 5px;
}

.info-1, .info-2, .info-3 {
    font-family: 'Roboto', sans-serif;
    position: relative;
    font-size: 15px;
    font-weight: 400px;
    color: #073243;
    margin: 0;
    margin-top: 20px;
    width: 482px;
    height: 107px;
    text-align: justify;
}

.date-1, .date-2, .date-3 {
    font-family: 'Roboto', sans-serif;
    position: relative;
    font-size: 18px;
    font-weight: 500px;
    color: #073243;
    margin: 0;
    left: 162px;
}

.button-container {
    display: flex;
    flex-direction: row;
    gap: 15px;
    margin-top: 15px;
    flex-wrap: nowrap;
}

.btns-2, .btns-1, .btns-3 {
    font-family: 'Roboto', sans-serif;
    font-size: 15px;
    background-color: transparent;
    border: 2px solid #073243;
    border-radius: 20px;
    padding: 5px 20px;
    cursor: pointer;
    color: #073243;
    white-space: nowrap;
    transition: transform 0.1s ease;
}

.btns-1:active, .btns-2:active, .btns-3:active {
    transform: scale(0.92); 
}

.author-container {
    position: relative;
    bottom: 125px;
    left: 944px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
}

@font-face {
  font-family: "NewYork";
  src: url("fonts/NewYork PERSONAL USE.otf") format("opentype");
  font-weight: normal;
  font-style: normal;
}


.author-name {
    position: relative;
    left: 62px;
    font-family: 'NewYork', sans-serif;
    font-size: 30px;
    font-weight: 700;
    letter-spacing: 3px;
    color: #073243;
    margin: 0;
}

.author-description {
    position: relative;
    text-align: left;
    bottom: 15px;
    left: 118px;
    font-family: 'Roboto', sans-serif;
    font-size: 15px;
    font-weight: 400;
    color: #073243;
    margin: 0;
    width: 290px;
    height: 41px;
    text-align: justify;

}

.author-pic {
    position: relative;
    left: 118px;
    bottom: 20px;
    width: 265px;
    height: 183px;
    border-top: 3px solid black;
    border-bottom: 3px solid black;
}

